--- a/app/templates/_navbar.html
+++ b/app/templates/_navbar.html
@@ -7,17 +7,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
+                <li class="nav-item {% if request.endpoint == 'main.home' %}active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if request.endpoint == 'main.about' %}active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
                 </li>
                 {% if current_user.is_authenticated %}
-                <li class="nav-item">
+                <li class="nav-item {% if request.endpoint == 'main.journal_entries' %}active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.journal_entries') }}">Journal Entries</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if request.endpoint == 'main.account' %}active{% endif %}">
                     <a class="nav-link" href="{{ url_for('main.account') }}">Account</a>
                 </li>
                 <li class="nav-item">
