--- a/app/templates/login_modal.html
+++ b/app/templates/login_modal.html
@@ -1,21 +1,26 @@
 <form method="POST" action="{{ url_for('main.login') }}">
-    {{ form.hidden_tag() }}
+    <input type="hidden" name="csrf_token" value="{{ form.csrf_token.current_token }}">
+    
     <div class="form-group">
-        {{ form.email(class_="form-control", id="emailInput", aria_describedby="emailHelp") }}
+        {{ form.email.label(class_="form-label", for_="emailInputLogin") }}
+        {{ form.email(class_="form-control", id="emailInputLogin", aria_describedby="emailHelpLogin", autocomplete="email") }}
         {% for error in form.email.errors %}
             <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
+    
     <div class="form-group">
-        {{ form.password.label(class_="form-label") }}
-        {{ form.password(class_="form-control") }}
+        {{ form.password.label(class_="form-label", for_="passwordInputLogin") }}
+        {{ form.password(class_="form-control", id="passwordInputLogin", autocomplete="current-password") }}
         {% for error in form.password.errors %}
             <span class="text-danger">{{ error }}</span>
         {% endfor %}
     </div>
+    
     <div class="form-group form-check">
-        {{ form.remember(class_="form-check-input") }}
-        {{ form.remember.label(class_="form-check-label") }}
+        {{ form.remember(class_="form-check-input", id="rememberMeLogin") }}
+        {{ form.remember.label(class_="form-check-label", for_="rememberMeLogin") }}
     </div>
+    
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
